<resources>
    <string name="appname">SkyClass</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_page4">Page4</string>
          <string name="startButton">开始</string>
    <string name="pauseButton">暂停</string>
    <string name="resetButton">重置</string>
    <string name="stopButton">停止</string>
     <string name="path">下载路径</string>
	<string name="downloadbutton">下载</string>
	<string name="sdcarderror">SDCard不存在或者写保护</string>
	<string name="success">下载完成</string>
    <string name="error">下载失败</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="video_layout_loading">正在缓冲...</string>
        <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
        <string name="soft_update_no">当前已是最新版本</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
     <string name="soft_update_title">检测到新版本</string>
     <string name="soft_update_info">是否下载更新</string>
     <string name="soft_update_updatebtn">下载</string>
     <string name="soft_update_later">稍后更新</string>
     <string name="soft_updating">下载中</string>
     <string name="soft_update_cancel">取消更新</string>
    <string name="info_times_hour">Hour</string>
    <string name="info_times_minute">Minute</string>
    <string name="down_from_market">Download from Google Play</string>
    <string name="down_from_website">Download from website</string>
    <string name="exit">Exit</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel </string>
    <string name="donwload">Download</string>
    <string-array name="activities_array">
        <item>办公室</item>
        <item>图书馆</item>
        <item>家里</item>
        <item>室外</item>
        <item>公交</item>
        <item>汽车</item>
        <item>地铁</item>
        <item>飞机</item>
        <item>火车</item>
        <item>其他</item>       
    </string-array>
    <string name="app_name">Intelligent_room</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_livecourse">当前没有正在直播的课程！</string>
    <string name="intelligent_room">智能教室直播系统</string>
    <string name="zhibo">正在直播</string>
    <string name="gozhibo">马上直播</string>
    <string name="studentnumber">在线人数</string>
    <string name="select">选择学科专业</string>
    <string name="major1">全部</string>
    <string name="major2">计算机科学与技术</string>
    <string name="major3">电子科学与技术</string>
    <string name="major4">软件工程</string>
    <string name="loading">正在加载中，请稍候。。。</string>
    <string name="noonline">现在没有正在直播的课程</string>
    <string name="nopreparingcourse">今天已经没有准备直播的课程</string>
    <string name="courseName">直播课程：</string>
    <string name="collegeName">开课学院：</string>
    <string name="className">教室：</string>
    <string name="teacherName">教师姓名：</string>
    <string name="startTime">开始时间：</string>
    <string name="endTime">结束时间：</string>
    <string name="start">开 始</string>
    <string name="queding">确 定</string>
    <string name="quit">退出</string>
    <string name="quit1">确定要退出登陆吗？</string>
    <string name="refresh">刷新</string>
    <string name="courseTips">请选择播放的视频：</string>
    <string name="screen">屏幕视频</string>
    <string name="classroom">教室视频</string>
	<string-array name="list_item">
	    <item name="all">所有课程</item>
	    <item name="dianxin">电信学院</item>
	    <item name="ruanjain">软件学院</item>
	    <item name="renwen">人文学院</item>
	    <item name="nengdong">材料学院</item>
	</string-array>
    <string name="ob_login_success">登录成功</string>
    <string name="ob_login_error">登录错误</string>
    <string name="ob_login_errormsg">用户名和密码不能为空！</string>
    <string name="ob_login_failure">登录失败</string>
    <string name="ob_login_failuremsg">用户名或密码错误！</string>
    <string name="ob_loading_tips">正在加载...</string>
    <string name="ob_loading_version_checking">正在检测版本...</string>
    <string name="ob_login_string_tips">登录中...</string>
    <string name="ob_sending_msg">正在发送...</string>
    <string name="ob_send_success">发送成功</string>
    <string name="ob_send_error">发送失败</string>
    <string name="ob_login_other">注意：您的账号已经在其他设备上登录！</string>
    <string name="ob_regist_uap">请填写用户名或密码</string>
    <string name="ob_regist_tpn">两次输入密码不同</string>
    <string name="ob_regist_umr">用户名必须为正确邮箱！</string>
    <string name="ob_regist_pms">密码必须为6-16位数字和字母</string>
    <string name="ob_regist_ai">请同意学吧网络协议！</string>
    <string name="ob_speak_uap">发言和转发</string>
    <string name="ob_speak_tpn">评论和回复</string>
    <string name="ob_speak_umr">赞我的</string>
    <string name="ob_menu_change_user">切换用户</string>
    <string name="ob_menu_feedback">意见反馈</string>
    <string name="ob_menu_help">新手帮助</string>
    <string name="ob_menu_about">关于</string>
    <string name="ob_menu_exit">退出</string>
    <string name="ob_menu_check_version">版本检测</string>
    <string name="ob_navigation_regist">注册</string>
    <string name="ob_navigation_public_course">首页</string>
    <string name="ob_navigation_course">课程</string>
    <string name="ob_navigation_group">群组</string>
    <string name="ob_navigation_friends">个人</string>
    <string name="ob_navigation_more">更多</string>
    <string name="ob_navigation_more_title">更多应用</string>
    <string name="ob_navigation_notice">通知</string>
    <string name="ob_course_string_notice111">公告 %1$s</string>
    <string name="ob_course_title">课程详情</string>
    <string name="ob_course_no_course">您所有的课程已学完。</string>
    <string name="ob_course_no_course_rg">奥鹏学员请使用学历账号登陆；\n\n如果您不是奥鹏学员，请关注奥鹏教育主页了解报名详情：\n http://www.open.com.cn/。</string>
    <string name="ob_course_no_course_rg_by">本模块是您当下需要学习的在修课程，目前您没有在修课程哦。</string>
    <string name="ob_course_notice">课程公告</string>
    <string name="ob_course_navigation_video">视频</string>
    <string name="ob_course_navigation_doc">文档</string>
    <string name="ob_course_navigation_test">评测</string>
    <string name="ob_course_navigation_notice">公告</string>
    <string name="ob_course_string_video">视频 \n %1$d</string>
    <string name="ob_course_string_doc">文档 %1$d</string>
    <string name="ob_course_string_homework">评测 %1$d</string>
    <string name="ob_course_string_notice">公告 %1$d</string>
    <string name="ob_course_login_message">登录成功</string>
    <string name="ob_course_notice_adjunct">附件</string>
    <string name="ob_course_detail_tab">详情</string>
    <string name="ob_course_comment_tab">评论</string>
    <string name="ob_course_adapter_tab">选集</string>
    <string name="ob_course_fragment_course_rating">评分：</string>
    <string name="ob_course_fragment_course_subject">学科：</string>
    <string name="ob_course_fragment_course_major">专业：</string>
    <string name="ob_course_fragment_course_college">院校：</string>
    <string name="ob_course_fragment_course_size">大小：</string>
    <string name="ob_course_fragment_course_comment_number">评论数：</string>
    <string name="ob_course_fragment_course_submit_comment">评论</string>
    <string name="ob_course_fragment_course_total_play_number">总播放数：</string>
    <string name="ob_course_fragment_course_submit_rating">提交</string>
    <string name="ob_course_fragment_course_submit_rating_success">评论成功</string>
    <string name="ob_course_fragment_comment_having">共有</string>
    <string name="ob_course_fragment_comment_number">条记录</string>
    <string name="ob_course_fragment_comment_prefix">//@</string>
    <string name="ob_course_fragment_comment_score">分</string>
    <string name="ob_homework_string_tip1"><b>亲爱的学员，你好：</b> \n        当前作业已经提交，且教师正在批改作业中的主观题。

    待批改完成后，您才能够再次答题。</string>
    <string name="ob_homework_string_tatalPoint">100</string>
    <string name="ob_homework_string_BackDirectory">课程目录</string>
    <string name="ob_homework_string_continueAnswer">继续答题</string>
    <string name="ob_homework_string_continueAnswerTip">欢迎回来,请继续答题。</string>
    <string name="ob_homework_string_total">试卷总分</string>
    <string name="ob_homework_string_actual_point">试卷得分</string>
    <string name="ob_homework_string_max">最高得分</string>
    <string name="ob_homework_string_count">答题次数</string>
    <string name="ob_homework_string_startAnswer">开始答题</string>
    <string name="ob_homework_string_point">%1$1s 分</string>
    <string name="ob_homework_string_AnswerCount">&lt;font
		color="#0099cb">&lt;b>%1$d&lt;/b>&lt;/font> / %2$d</string>
    <string name="ob_doc_string_author">发布人: %1$s </string>
    <string name="ob_homework_string_questionPoint">%1$s &lt;font
		color="#0099cb">&lt;b>%2$s&lt;/b>&lt;/font> 分 </string>
    <string name="ob_homework_string_question_hint">请写出%1$s的答案</string>
    <string name="ob_homework_string_pageNumber">&lt;b>&lt;font
		color="#0099cb">%1$d&lt;/font> / %2$d&lt;/b></string>
    <string name="ob_homework_string_Line">&lt;u> &#160;&#160;&#160;&#160;&#160;(%1$d)&#160;&#160;&#160;&#160;&#160; &lt;/u></string>
    <string name="ob_homework_string_Flag">( %1$d )</string>
    <string name="ob_homework_string_question_point">满分 : %1$s 分</string>
    <string name="ob_homework_string_back_course">返回课程</string>
    <string name="ob_homework_string_answer_continue">继续答题</string>
    <string name="ob_homework_string_reanswer">重新答题</string>
    <string name="ob_homework_string_saveAndExit">保存并退出</string>
    <string name="ob_homework_string_result">阅卷结果</string>
    <string name="ob_homework_string_result_title">作业结果</string>
    <string name="ob_homework_string_Homework_name">作业名称</string>
    <string name="ob_homework_string_correct_date">评阅时间</string>
    <string name="ob_homework_string_correct_tips1">作业已提交.</string>
    <string name="ob_homework_string_correct_tips2">&#160;&#160;&#160;接下来，您的任课老师会批改作业中的主观题，请您耐心等待，待批改完成后系统会推送消息给您！</string>
    <string name="ob_homework_string_submit">交&#160;&#160;&#160;&#160;卷</string>
    <string name="ob_homework_string_failed">获取试卷数据失败.</string>
    <string name="ob_doc_pictrue_saved_success">图片保存成功,请在相册查看。</string>
    <string name="ob_doc_pictrue_saved_failed">图片保存失败.</string>
    <string name="ob_doc_pictrue_download_failed">下载图片失败,请检查网络或是服务器文件不存在</string>
    <string name="ob_doc_unsupport_type_tips">暂时不支持此文件类型查看,请下载后使用相关程序查看</string>
    <string name="ob_doc_unsupport_type_tips2">暂时不支持此文件类型查看,请在登陆PC端查看</string>
    <string name="ob_video_nodata_tip">本课程没有终端适配的视频，请先到PC端学习吧~</string>
    <string name="ob_doc_unsupport_tip3">(不支持类型文档)</string>
    <string name="ob_course_notice_more">显示更多</string>
    <string name="ob_more_string_download_manager">下载管理</string>
    <string name="ob_more_string_educationNotice">教务公告</string>
    <string name="ob_more_string_mineNotice">学吧通知</string>
    <string name="ob_more_string_MyFavorite">我的收藏</string>
    <string name="ob_more_string_feedback">意见反馈</string>
     <string name="ob_more_string_NsNotice">禁言通知</string>
    <string name="ob_more_string_about">关于学吧</string>
    <string name="ob_more_string_setting">消息提醒设置</string>
    <string name="ob_more_string_course_detail">课程详情</string>
    <string name="ob_more_string_course_download">课程下载</string>
    <string name="setting_is_get">接收新消息通知</string>
    <string name="setting_voice">声音</string>
    <string name="setting_va">震动</string>
    <string name="ob_more_string_about_txt01">for Android v2.0.1</string>
    <string name="ob_more_string_about_txt02">Copyright@2001-2014</string>
    <string name="ob_more_string_about_txt03">奥鹏教育版权所有</string>
    <string name="ob_more_string_copyright">版权信息</string>
</resources>