<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dip"
    android:orientation="vertical"
    android:gravity="center" >
    <TextView
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/quit1"
       android:textSize="20dip"
       android:textColor="@color/white"
       android:textStyle="bold"/>
    <LinearLayout 
        android:layout_marginTop="8dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/quitButtonDlg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/trueButtonDlg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/queding"/>
    </LinearLayout>
</LinearLayout>
