<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_sub"
        >
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    <Button
        android:id="@+id/jumpButton_sub"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:background="@drawable/jump"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">
    </Button> 
    </LinearLayout>    
    
    <LinearLayout 
        android:layout_marginTop="-15dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView 
           android:textSize="22dip"
           android:id="@+id/majorTextView"
           android:text="计算机科学与技术"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
    </LinearLayout>   

    <LinearLayout
        android:layout_marginTop="25dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
             <TextView 
                  android:id="@+id/onlinecoursenumber_sub"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="32"
                  android:textSize="18dp"
                  android:layout_marginBottom="5dp"/>
             <TextView 
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/zhibo"
                  android:textColor="@color/gray"
                  android:textSize="18dp"
                  />
        </LinearLayout>
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
             <TextView 
                  android:id="@+id/noonlinecoursenumber_sub"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="20"
                  android:textSize="18dp"
                  android:layout_marginBottom="5dp"/>
             <TextView 
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/gozhibo"
                   android:textColor="@color/gray"
                  android:textSize="18dp"
                  />
        </LinearLayout>
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
             <TextView 
                  android:id="@+id/onlinestudentnumber_sub"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="70"
                  android:textSize="18dp"
                  android:layout_marginBottom="5dp"/>
             <TextView 
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/studentnumber"
                  android:textColor="@color/gray"
                  android:textSize="18dp"
                  />
        </LinearLayout>
    </LinearLayout>   

    </LinearLayout>
    
    <TabHost android:layout_width="match_parent" 
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:id="@+id/tabHost_sub">
        <LinearLayout 
             android:layout_width="match_parent" 
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center">
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:visibility="gone" >
        </TabWidget>
        <RadioGroup 
            android:id="@+id/radioGruop_sub"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/button_back"
            android:gravity="center"
            android:layout_marginTop="5dp"
            >
            <RadioButton
                 android:id="@+id/radioButton1_sub" 
                 android:layout_width="wrap_content" 
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:text="正在直播"/>
            <RadioButton 
                 android:gravity="center"
                 android:id="@+id/radioButton2_sub"
                 android:layout_width="wrap_content" 
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:layout_weight="1"
                 android:text="准备直播"/>
        </RadioGroup>
        
        <FrameLayout
             android:id="@android:id/tabcontent"
             android:layout_width="match_parent" 
             android:layout_height="wrap_content" >
        </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>