<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dip"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dialogTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingTop="10dip"
            android:text="@string/courseTips"
            android:textColor="@color/white"
            android:textSize="15dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialogImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"            
            android:background="@color/blue" >
        </ImageView>
    </LinearLayout>
    <!--
    <LinearLayout 
      android:layout_marginTop="10dip"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
     >
        <TextView 
            android:text="@string/courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            />
        <TextView
            android:layout_marginLeft="8dip"
            android:text="直播课程"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courseNameTextView"
            android:layout_weight="1"
            android:gravity="left"
            />
    </LinearLayout>
    <LinearLayout 
      android:layout_marginTop="8dip"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
     >
        <TextView 
            android:text="@string/collegeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            />
        <TextView
            android:layout_marginLeft="8dip"
            android:text="开课学院"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/collegeNameTextView"
            android:layout_weight="1"
            android:gravity="left"
            />
    </LinearLayout>
    <LinearLayout 
      android:layout_marginTop="8dip"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
    >
        <TextView 
            android:text="@string/className"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            />
        <TextView
            android:layout_marginLeft="8dip"
            android:text="教室"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/classNameTextView"
            android:layout_weight="1"
            android:gravity="left"
            />
    </LinearLayout>
    <LinearLayout 
      android:layout_marginTop="8dip"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
    >
        <TextView 
            android:text="@string/teacherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            />
        <TextView
            android:layout_marginLeft="8dip"
            android:text="教师"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teacherNameTextView"
            android:layout_weight="1"
            android:gravity="left"
            />
    </LinearLayout>
    <LinearLayout
      android:layout_marginTop="8dip" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
    >
        <TextView 
            android:text="@string/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            />
        <TextView
            android:layout_marginLeft="8dip"
            android:text="开始时间"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startNameTextView"
            android:layout_weight="1"
            android:gravity="left"
            />
    </LinearLayout>
    <LinearLayout 
      android:layout_marginTop="8dip"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
     >
        <TextView 
            android:text="@string/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            />
        <TextView
            android:layout_marginLeft="8dip"
            android:text="结束时间"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endTimeTextView"
            android:layout_weight="1"
            android:gravity="left"
            />
     </LinearLayout>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/classButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classroom"
            android:textColor="@color/white"
            android:textSize="15dip" />
        <!--
                android:text="@string/cancel"
                       android:text="@string/start"
                 android:background="@drawable/dailogbuttonselect"
                android:background="@drawable/dailogbuttonselect"
        -->

        <Button
            android:id="@+id/screenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:text="@string/screen"
            android:textColor="@color/white"
            android:textSize="15dip" />
    </LinearLayout>

</LinearLayout>